--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -18,6 +18,6 @@ FROM openjdk:11-jdk-slim
 
 RUN apt-get -y update \
     && apt-get -y install curl \
-    && curl -fSL https://s3.us-east-2.amazonaws.com/hm-witsml-server/server-0.0.1-SNAPSHOT.jar -o server-0.0.1-SNAPSHOT.jar \
+    && curl -fSL https://s3.us-east-2.amazonaws.com/hm-witsml-server/server-0.0.1-SNAPSHOT.jar -o server-0.0.1-SNAPSHOT.jar
 
 CMD java -jar server-0.0.1-SNAPSHOT.jar
