--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
 	<packaging>jar</packaging>
 
 	<name>server</name>
-	<description>Demo project for Spring Boot</description>
+	<description>A dockerized WITSML API Server that is agnostic of the backend.</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.0.RC1</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 
 	<properties>
