--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,7 +19,7 @@ FROM openjdk:11-jdk-slim
 RUN apt-get update \
     && apt-get -y install curl \
     && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/* \
     && curl -fSL https://s3.us-east-2.amazonaws.com/hm-witsml-server/server-0.0.1-SNAPSHOT.jar -o server-0.0.1-SNAPSHOT.jar
 
 
