This commit refactors and resolves #15.
The ServerCap is now used as the config object

--- a/src/main/resources/servercap.properties
+++ b/src/main/resources/servercap.properties
@@ -1,19 +1,11 @@
 #Contact information
-wmls.capserver=capServer
-wmls.capserver.contact.name=Server contact name
-wmls.capserver.contact.email=serverAdministrator@serverCompany.com
-wmls.capserver.contact.phone=281-135-7924
-#contactEmail
-
-#Server information
-wmls.capserver.description=Server description
-wmls.capserver.name=John Smith
-wmls.capserver.vendor=INSITE Server #1
-wmls.capserver.version=1.1.0.120
-wmls.capserver.schemaVersion=1.4.1.0
-wmls.capserver.changeDetectionPeriod=36
-wmls.capserver.cascadedDelete=false
-wmls.capserver.supportUomConversion=true
-wmls.capserver.compressionMethod=gzip
-
-#wmls.growingTimeouts=
+wmls.contactName=Randy
+wmls.contactEmail=serverAdministrator@serverCompany.com
+wmls.contactPhone=281-135-7924
+wmls.changeDetectionPeriod=57
+wmls.description=Server description
+wmls.name=John Smith
+wmls.supportUomConversion=true
+wmls.compressionMethod=gzip
+wmls.cascadedDelete=true
+wmls.growingTimeouts[0]={key1:'log',key2:12}
