--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,15 @@ os:
 - linux
 jdk:
 - openjdk11
+before_install:
+  - sudo apt-get install jq
+  - wget -O ~/codacy-coverage-reporter-assembly-latest.jar $(curl https://api.github.com/repos/codacy/codacy-coverage-reporter/releases/latest | jq -r '.assets[0].browser_download_url')
 install: mvn clean install
 cache:
   directories:
   - "$HOME/.m2"
 after_success:
+  - java -jar ~/codacy-coverage-reporter-assembly-latest.jar report -l Java -r build/reports/jacoco/test/jacocoTestReport.xml
   - mkdir $TRAVIS_BUILD_DIR/out
   - mv $TRAVIS_BUILD_DIR/target/*.jar $TRAVIS_BUILD_DIR/out
 deploy:
