--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ os:
 jdk:
 - openjdk11
 before_install:
-  - sudo apt-get install jq
+  - sudo apt-get install -y jq
+  - sudo apt-get install -y wget
+  - sudo apt-get install -y curl
   - wget -O ~/codacy-coverage-reporter-assembly-latest.jar $(curl https://api.github.com/repos/codacy/codacy-coverage-reporter/releases/latest | jq -r '.assets[0].browser_download_url')
 install: mvn clean install
 cache:
