--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,14 @@ before_install:
   - sudo apt-get install -y wget
   - sudo apt-get install -y curl
   - wget -O ~/codacy-coverage-reporter-assembly-latest.jar $(curl https://api.github.com/repos/codacy/codacy-coverage-reporter/releases/latest | jq -r '.assets[0].browser_download_url')
-install: mvn clean install
+install: 
+  - mvn clean install
+  - mvn jacoco:report
 cache:
   directories:
   - "$HOME/.m2"
 after_success:
-  - java -jar ~/codacy-coverage-reporter-assembly-latest.jar report -l Java -r build/reports/jacoco/test/jacocoTestReport.xml
+  - java -jar ~/codacy-coverage-reporter-assembly-latest.jar report -l Java -r $TRAVIS_BUILD_DIR/target/site/jacoco/jacoco.xml
   - mkdir $TRAVIS_BUILD_DIR/out
   - mv $TRAVIS_BUILD_DIR/target/*.jar $TRAVIS_BUILD_DIR/out
 deploy:
@@ -29,4 +31,4 @@ deploy:
   region: us-east-2
   acl: public_read
   on:
-    repo: hashmapinc/WitsmlApi-Server
+    repo: hashmapinc/Drillflow
