--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - sudo apt-get install -y jq
   - sudo apt-get install -y wget
   - sudo apt-get install -y curl
-  - wget -O ~/codacy-coverage-reporter-assembly-latest.jar $(curl https://api.github.com/repos/codacy/codacy-coverage-reporter/releases/latest | jq -r '.assets[0].browser_download_url')
+  - wget -O ~/codacy-coverage-reporter-assembly-latest.jar https://s3.us-east-2.amazonaws.com/hm-witsml-server/codacy-coverage-reporter-4.0.3-assembly.jar
 install: 
   - mvn clean install
   - mvn jacoco:report
