Handling error message not found case

--- a/src/main/resources/basemessages.properties
+++ b/src/main/resources/basemessages.properties
@@ -107,3 +107,4 @@ basemessages.-485=The client is polling too fast.
 
 basemessages.-486=In WMLS_AddToStore, the WMLtypeIn objectType must match the XMLin objectType. Currently, they do not match.
 basemessages.-487=In WMLS_AddToStore, the objectType being added in WMLtypeIn must be an objectType supported by the server. The server does not support the object type trying to be added.
+basemessages.-999=Unknown Base Message
