--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -20,7 +20,6 @@ RUN apt-get update \
     && apt-get install -y --no-install-recommends curl \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* \
-    && curl -fSL https://s3.us-east-2.amazonaws.com/hm-witsml-server/server-0.0.1-SNAPSHOT.jar -o server-0.0.1-SNAPSHOT.jar
+    && curl -fSL https://s3.us-east-2.amazonaws.com/hm-witsml-server/df-server-0.0.1-SNAPSHOT.jar -o df-server-0.0.1-SNAPSHOT.jar
 
-
-CMD java -jar server-0.0.1-SNAPSHOT.jar
+CMD java -jar df-server-0.0.1-SNAPSHOT.jar
