--- a/df-valve/factory/pom.xml
+++ b/df-valve/factory/pom.xml
@@ -38,23 +38,27 @@
 
     <parent>
         <groupId>com.hashmapinc.tempus.witsml</groupId>
-        <artifactId>DrillFlow</artifactId>
+        <artifactId>df-valve</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>df-valve</artifactId>
+    <artifactId>factory</artifactId>
     <packaging>pom</packaging>
 
-    <name>DrillFlow Valve Module</name>
+    <name>DrillFlow Valve Factory</name>
     <url>https://hashmapinc.com</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <main.dir>${basedir}/..</main.dir>
+        <main.dir>${basedir}/../..</main.dir>
     </properties>
 
-    <modules>
-        <module>dot-valve</module>
-        <module>factory</module>
-    </modules>
+    <dependencies>
+        <!-- used for witsml object ser/de -->
+        <dependency>
+            <groupId>com.hashmapinc.tempus</groupId>
+            <artifactId>WitsmlObjects</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+    </dependencies>
 </project>
