fixed error packaging valve factory as a POM instead of JAR

--- a/df-valve/factory/pom.xml
+++ b/df-valve/factory/pom.xml
@@ -43,7 +43,7 @@
     </parent>
 
     <artifactId>factory</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <name>DrillFlow Valve Factory</name>
     <url>https://hashmapinc.com</url>
