--- a/df-server/pom.xml
+++ b/df-server/pom.xml
@@ -63,12 +63,6 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <!--
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
-        -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -121,6 +115,13 @@
             <groupId>com.hashmapinc.tempus</groupId>
             <artifactId>WitsmlObjects</artifactId>
             <version>1.1.1</version>
+        </dependency>
+
+        <!-- import the valves -->
+        <dependency>
+            <groupId>com.hashmapinc.tempus.witsml</groupId>
+            <artifactId>df-valve</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
