--- a/df-valve/pom.xml
+++ b/df-valve/pom.xml
@@ -60,5 +60,19 @@
             <artifactId>WitsmlObjects</artifactId>
             <version>1.1.1</version>
         </dependency>
+
+        <!-- used for json interactions -->
+        <dependency>
+            <groupId>javax.json</groupId>
+            <artifactId>javax.json-api</artifactId>
+            <version>1.1.4</version>
+        </dependency>
+
+        <!-- used to convert witsml object POJOs to json -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.9.7</version>
+        </dependency>
     </dependencies>
 </project>
