--- a/df-valve/pom.xml
+++ b/df-valve/pom.xml
@@ -71,7 +71,7 @@
         <!-- used to convert witsml object POJOs to json -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
+            <artifactId>jackson-databind</artifactId>
             <version>2.9.7</version>
         </dependency>
     </dependencies>
