--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,15 @@
 		</plugins>
 	</build>
 
+	<dependencies>
+		<!-- used for witsml object ser/de -->
+		<dependency>
+			<groupId>com.hashmapinc.tempus</groupId>
+			<artifactId>WitsmlObjects</artifactId>
+			<version>1.1.2</version>
+		</dependency>
+	</dependencies>
+
 	<modules>
         <module>df-valve</module>
         <module>df-server</module>
