--- a/df-server/pom.xml
+++ b/df-server/pom.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <!--
 
     Copyright © 2018-2018 Hashmap, Inc
@@ -115,6 +116,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>LATEST</version>
+		</dependency>
 
         <!-- import the valves -->
         <dependency>
@@ -132,5 +138,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
