--- a/df-server/src/main/resources/application.properties
+++ b/df-server/src/main/resources/application.properties
@@ -2,5 +2,4 @@ cxf.path=/Service
 server.port=7070
 wmls.version=1.3.1.1,1.4.1.1
 valve.name=DoT
-valveprop={baseurl:"http://localhost:8080",apikey:"test"}
-dot.auth.apikey=key
+valveprop={baseurl:"http://localhost:8080",apikey:"d838a72bbe684c3bbde1678bb81f35f8"}
