Adding fixes from code review

--- a/df-server/src/main/resources/application.properties
+++ b/df-server/src/main/resources/application.properties
@@ -2,4 +2,4 @@ cxf.path=/Service
 server.port=7070
 wmls.version=1.3.1.1,1.4.1.1
 valve.name=DoT
-valveprop={baseurl:"http://localhost:8080",apikey:"test"}
+valveprop={baseurl:"http://localhost:8080/",apikey:"test"}
