--- a/df-server/src/main/resources/application.properties
+++ b/df-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 cxf.path=/Service
 server.port=7070
-wmls.version=1.3.1.1,1.4.1.1
+wmls.version=1.3.1.1,1.4.1.13
 valve.name=DoT
-valveprop={baseurl:"http://localhost:8080/",apikey:"test"}
+valveprop={baseurl:"https://api-demo.nam.drillops.slb.com/",apikey:"675d1747dd6a40abaa6ba40cb443467c"}
