--- a/df-server/src/main/resources/application.properties
+++ b/df-server/src/main/resources/application.properties
@@ -2,4 +2,4 @@ cxf.path=/Service
 server.port=7070
 wmls.version=1.3.1.1,1.4.1.13
 valve.name=DoT
-valveprop={baseurl:"https://api-demo.nam.drillops.slb.com/",apikey:"675d1747dd6a40abaa6ba40cb443467c"}
+valveprop={baseurl:"http://localhost:7070/",apikey:"test"}
