--- a/df-server/src/main/resources/application.yml
+++ b/df-server/src/main/resources/application.yml
@@ -23,5 +23,8 @@ valve :
     configuration :
         baseurl: ${VALVE_BASE_URL}
         apikey: ${VALVE_API_KEY}
+        token.path: token/jwt/v1/
+        well.path: democore/well/v2/witsml/wells/
+        wellbore.path: democore/wellbore/v1/wellbores/
 wmls:
     version: 1.3.1.1,1.4.1.1
