--- a/pom.xml
+++ b/pom.xml
@@ -118,7 +118,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<configuration>
-					<skipTests>${skipITs}</skipTests>
+					<skipTests>true</skipTests>
 				</configuration>
 				<executions>
 					<execution>
