--- a/df-valve/pom.xml
+++ b/df-valve/pom.xml
@@ -87,5 +87,11 @@
 			<version>2.23.4</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>xmlunit</groupId>
+			<artifactId>xmlunit</artifactId>
+			<version>1.4</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
