--- a/.travis.yml
+++ b/.travis.yml
@@ -33,5 +33,4 @@ deploy:
   on:
     repo: hashmapinc/Drillflow
 after_deploy:
-  - curl -H "Content-Type: application/json" --data '{"docker_tag": "master"}' -X POST https://registry.hub.docker.com/u/hashmapinc/drillflow/trigger/e7994f9c-af82-4576-96d4-26ebe5a5a64e/
-
+  - "curl -H 'Content-Type: application/json' --data '{\"docker_tag\": \"master\"}' -X POST https://registry.hub.docker.com/u/hashmapinc/drillflow/trigger/e7994f9c-af82-4576-96d4-26ebe5a5a64e/"
