added hystrix with basic rest command class

--- a/df-valve/pom.xml
+++ b/df-valve/pom.xml
@@ -74,6 +74,11 @@
 			<artifactId>unirest-java</artifactId>
 			<version>1.4.9</version>
 		</dependency>
+		<dependency>
+			<groupId>com.netflix.hystrix</groupId>
+			<artifactId>hystrix-core</artifactId>
+			<version>1.5.18</version>
+		</dependency>
 
 		<!-- test dependencies -->
 		<dependency>
