--- a/df-server/src/main/resources/application.yml
+++ b/df-server/src/main/resources/application.yml
@@ -27,5 +27,6 @@ valve :
         well.path: democore/well/v2/witsml/wells/
         well.gql.path: democore/well/v2/graphql/
         wellbore.path: democore/wellbore/v1/witsml/wellbores/
+        wellbore.gql.path: democore/wellbore/v1/graphql/
 wmls:
     version: 1.3.1.1,1.4.1.1
