--- a/df-server/src/main/resources/application.yml
+++ b/df-server/src/main/resources/application.yml
@@ -28,5 +28,6 @@ valve :
         well.gql.path: democore/well/v2/graphql/
         wellbore.path: democore/wellbore/v1/witsml/wellbores/
         wellbore.gql.path: democore/wellbore/v1/graphql/
+        trajectory.path: democore/trajectoryreader/v1/witsml/trajectories/
 wmls:
     version: 1.3.1.1,1.4.1.1
