Adding optional GZIP compression to drillflow

--- a/df-server/src/main/resources/servercap.properties
+++ b/df-server/src/main/resources/servercap.properties
@@ -5,6 +5,6 @@ wmls.contactPhone=281-135-7924
 wmls.changeDetectionPeriod=57
 wmls.description=Server description
 wmls.name=John Smith
-wmls.supportUomConversion=true
+wmls.supportUomConversion=false
 wmls.compressionMethod=gzip
-wmls.cascadedDelete=true
+wmls.cascadedDelete=false
