--- a/df-server/src/main/resources/application.yml
+++ b/df-server/src/main/resources/application.yml
@@ -31,3 +31,4 @@ valve :
         trajectory.path: democore/trajectoryreader/v1/witsml/trajectories/
 wmls:
     version: 1.3.1.1,1.4.1.1
+    compression: true
