--- a/df-server/src/main/resources/application.yml
+++ b/df-server/src/main/resources/application.yml
@@ -33,3 +33,5 @@ valve :
 wmls:
     version: 1.3.1.1,1.4.1.1
     compression: true
+logging:
+    config: ${LOGBACK_CONFIG_FILE:classpath:logback-spring.xml}
