--- a/df-server/src/main/resources/application.yml
+++ b/df-server/src/main/resources/application.yml
@@ -23,13 +23,13 @@ valve :
     configuration :
         baseurl: ${VALVE_BASE_URL}
         apikey: ${VALVE_API_KEY}
-        token.path: token/jwt/v1/
-        well.path: democore/well/v2/witsml/wells/
-        well.gql.path: democore/well/v2/graphql/
-        wellbore.path: democore/wellbore/v1/witsml/wellbores/
-        wellbore.gql.path: democore/wellbore/v1/graphql/
-        trajectory.path: democore/trajectoryreader/v1/witsml/trajectories/
-        trajectory.gql.path: democore/trajectoryreader/v1/graphql/
+        token.path: ${TOKEN_PATH:/token/jwt/v1/}
+        well.path: ${WELL_PATH:democore/well/v2/witsml/wells/}
+        well.gql.path: ${WELL_GQL_PATH:democore/well/v2/graphql/}
+        wellbore.path: ${WB_PATH:democore/wellbore/v1/witsml/wellbores/}
+        wellbore.gql.path: ${WB_GQL_PATH:democore/wellbore/v1/graphql/}
+        trajectory.path: ${TRAJ_PATH:democore/trajectoryreader/v1/witsml/trajectories/}
+        trajectory.gql.path: ${TRAJ_GQL_PATH:democore/trajectoryreader/v1/graphql/}
 wmls:
     version: 1.3.1.1,1.4.1.1
     compression: true
