--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,20 @@
 			<artifactId>WitsmlObjects</artifactId>
 			<version>1.1.30</version>
 		</dependency>
+
+		<!-- TMS -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+			<version>2.9.8</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<modules>
