--- a/df-server/src/main/resources/application.yml
+++ b/df-server/src/main/resources/application.yml
@@ -30,6 +30,10 @@ valve :
         wellbore.gql.path: ${WB_GQL_PATH:democore/wellbore/v1/graphql/}
         trajectory.path: ${TRAJ_PATH:democore/trajectoryreader/v1/witsml/trajectories/}
         trajectory.gql.path: ${TRAJ_GQL_PATH:democore/trajectoryreader/v1/graphql/}
+        log.channelset.path: ${LOG_PATH:democore/channelreader/v4/witsml/channelSets/}
+        log.channelset.metadata.path: ${LOG_CHANNELSET_METADATA:democore/channelreader/v4/witsml/channelSets/}
+        log.channelset.uuid.path: ${LOG_CHANNELSET_UUID:democore/channelreader/v4/identities}
+        log.channels.path: ${LOG_CHANNELS:democore/channelreader/v4/witsml/channels/metadata/}
 wmls:
     version: 1.3.1.1,1.4.1.1
     compression: true
