--- a/df-valve/pom.xml
+++ b/df-valve/pom.xml
@@ -125,6 +125,12 @@
 			<artifactId>spring-context</artifactId>
 			<version>5.1.1.RELEASE</version>
 		</dependency>
+		<!-- used for JSON object ser/de -->
+		<dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>org.eclipse.persistence.moxy</artifactId>
+			<version>2.5.2</version>
+		</dependency>
 
 	</dependencies>
 </project>
