Switching Gears : Committing what I have for df-565
Will resume once work on RTC is completed.

--- a/df-server/src/main/resources/basemessages.properties
+++ b/df-server/src/main/resources/basemessages.properties
@@ -58,7 +58,7 @@ basemessages.-447=When adding or updating curves, column-identifiers must be uni
 
 basemessages.-448=For WMLS_UpdateInStore, if an element with a unique identifier in the schema is specified then the identifier value must also be specified
 
-basemessages.-449=When updating data i n a systematically growing data-object the indexCurve must be specified in the mnemonicList.
+basemessages.-449=When updating data in a systematically growing data-object, the indexCurve must be specified in the mnemonicList.
 basemessages.-450=When updating data in a systematically growing data-object, each mnemonic must occur only once in the mnemonicList.
 basemessages.-451=When updating data in a systematically growing data-object, the unitList must always be specified.
 
