Refactoring logging to be more logical

--- a/df-server/src/main/resources/application.yml
+++ b/df-server/src/main/resources/application.yml
@@ -45,3 +45,6 @@ wmls:
     compression: true
 logging:
     config: ${LOGBACK_CONFIG_FILE:classpath:logback-spring.xml}
+spring:
+    devtools:
+        add-properties: false
