--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,7 @@
 	<modules>
         <module>df-valve</module>
         <module>df-server</module>
+		<module>df-utils</module>
 	</modules>
 
     <repositories>
