Fix For Changing ENV Variable Path

--- a/df-server/src/main/resources/application.yml
+++ b/df-server/src/main/resources/application.yml
@@ -40,7 +40,7 @@ valve :
         log.channel.depthBoundaryData.path: ${LOG_DEPTH_BOUNDARY_DATA_PATH:https://api-demo.nam.drillops.slb.com/democore/channelreader/v4/channels/depthboundary}
         log.channel.timeBoundaryData.path: ${LOG_TIME_BOUNDARY_DATA_PATH:https://api-demo.nam.drillops.slb.com/democore/channelreader/v4/channels/timeboundary}
         fluids.report.path: ${FLUIDS_REPORT_PATH:https://api-demo.nam.drillops.slb.com/democore/fluidsreport/v1/witsml/fluidsReports}
-        fluids.report.identities: ${FLUIDS_REPORT_PATH:https://api-demo.nam.drillops.slb.com/democore/fluidsreport/v1/identities}
+        fluids.report.identities: ${FLUIDS_REPORT_IDENTITIES_PATH:https://api-demo.nam.drillops.slb.com/democore/fluidsreport/v1/identities}
 
 
 wmls:
